Move away from the fat jar